# lltdrek

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  airfoil_data_test.py  dataclass_test.py  example.ipynb  example.py  geometry.py  geometry_old.py  induced_velocity_numpy.ipynb  models.py  naca2412_xfoil.txt  pyproject.toml  requirements.txt  simulacao_linear.txt  test_load_data.py  test_timeit.py  teste multiplas asas.py  teste_cl_lookup.py  teste_complete_wing_pool.py  teste_flight_condition.py  teste_mirror_wing.py  teste_symmetry.py  teste_update_solution.py  teste_vij_distr.py  teste_vind.py  testes.py  todo  todo.md  validacao_artigo1.py  validacao_artigo2.py
.github/workflows/: build-test.yml  python-publish.yml
airfoils_test/: NACA4412_exp.txt  NACA4424_exp.txt  NACA64210_exp.txt  NACA64210_xfoil.txt  NACA65210_exp.txt  NACA65210_xfoil.txt  naca64210.txt
llt_drek_monoplano/NL-LLT V1.2 - referência/: R24.txt  aoa_solver.m  data_solver.asv  data_solver.m  llt_CLmax.asv  llt_CLmax.m  llt_autogap.m  llt_coeficientes.m  llt_main_solver.m  llt_principal.asv  llt_principal.m  llt_simplificado.m  llt_solver1.m  llt_solver2.m  nacaexp.txt  openfiles.m  plot_llt.m  re_solver.m  s5020.txt  testador_de_tempo.m  teste_clmax.m  yo.xlsx  ~$yo.xlsx
lltdrek/models/: enums.py  post_processing.py  simulation.py  wing.py  wingpool.py
lltdrek/utils/: data.py  (+4 more)
main_equations/: equations.py
matlab_reference/: llt_solver1.m  llt_solver2.m  llt_vind.m  opendat.m
models/: flight_condition.py  flight_conditions.py  post_processing.py  simulation.py  wing.py  wing_backup.py  wingpool.py
notebooks/: aerodynamic_center.ipynb  damping_derivatives.ipynb  example.ipynb  induced_velocity_numpy.ipynb  new_post_processing.ipynb  numpy_examples.ipynb  wing_pool_debug.ipynb
ref matlab/: llt_geometria.m  llt_main_solver.m  llt_simplificado.m  openfiles.m  tcc_artigo1.m  tcc_artigo2.m
sample_airfoils/: NACA4412.txt
simulation/: main_equations.py  main_equations_original.py
src/: __init__.py
utils/: data.py  geometry.py  lookup.py  velocity.py
validation/: NACA4412.txt  NACA4424_exp.txt  validacao_aoas.py  validacao_artigo1.py  validacao_artigo2.py  validacao_asa_clmax_grande.py  validacao_eh_bugado.py  validacao_multiplas_asas.py
(+35 files in other folders)
