[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lltdrek"
version = "1.0.0"
authors = [
  { name="Luis Kuodrek", email="kuodrek@gmail.com" },
]
description = "Package description"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/kuodrek/lltdrek"
